<resources>
   <string name="app_name">Know Your Birds (NZ)</string>
   <string name="action_settings">Settings</string>
   <string name="number_of_choices">Number of Choices</string>
   <string name="number_of_choices_description">Display 2, 4, 6 or 8 guess buttons</string>
   <string name="world_animals">Animals</string>
   <string name="world_animals_description">Animals to include in the quiz</string>
   <string name="guess_species">Pick the right species:</string>
   <string name="results">%1$d guesses, %2$.02f%% correct</string>
   <string name="incorrect_answer">Incorrect!</string>
   <string name="encourage_answer">DO YOU KNOW</string>
   <string name="default_animal_message">One animal subgroup must be selected. Setting Bird as the default animal subgroup.</string>
   <string name="restarting_quiz">Quiz will restart with your new settings</string>
   <string name="question">Question %1$d of %2$d</string>
   <string name="reset_quiz">Reset Quiz</string>
   <string name="donate">Donate</string>
   <string name="image_description">Image of the current species in the quiz</string>
   <string name="default_animal">Birds</string>
   <string name="title_activity_settings">Settings</string>
   <string name="number_of_questions">Number of Questions</string>
   <string name="number_of_choices_questions">Display 10, 20 or 50 questions</string>
   <string name="number_of_questions_description">Number of questions in the quiz</string>
   <string name="intro_heading">Introduction</string>
   <string name="intro_toptext"><![CDATA[<p>Test your knowledge of New Zealand (NZ) birds by correctly identifying a bird by name from a selection of images.</p><p>Access the settings during the quiz to change the total number of questions and the number of options displayed at each question.  More options makes it harder!</p><p>At the end of the quiz there is the option to \'reset quiz\', which will provide another random selection of birds from a total of 370 odd images. Enjoy!</p>]]></string>
   <string name="donate_heading">Save Our Birds</string>
   <string name="about_birdsonline"><![CDATA[Know Your Birds is an educational project built primarily for fun.  All of the content has been taken from the wonderful NZ Birds Online website, which can be directly accessed at <a href=\'http://www.nzbirdsonline.org.nz/\' title=\'NZ Birds Online website\'>nzbirdsonline.org.nz</a>]]></string>
   <string name="donate_forestbird"><![CDATA[NZ Birds Online don\'t have a donation page so please donate to NZ Forest &amp; Birds using the button below]]></string>
   <string name="about_gregstraight"><![CDATA[The app logo was derived from Tui Birds, an illustration by Greg Straight.  He’s a wonderful artist and you can view his work at <a href=\'http://www.gregstraight.com/\' title=\'Greg Straight website\'>gregstraight.com]]></string>
   <string name="donate_page">https://secure.forestandbird.org.nz/shop/donations.asp</string>
   <string name="image_description_tuibirds">Tui Birds illustration by Greg Straight</string>
   <string name="image_description_birdsonline">Birds Online website screenshot</string>
</resources>
