<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
   xmlns:android="http://schemas.android.com/apk/res/android">

   <ListPreference
      android:entries="@array/guesses_list"
      android:entryValues="@array/guesses_list"
      android:key="pref_numberOfChoices"
      android:title="@string/number_of_choices"
      android:summary="@string/number_of_choices_description"
      android:persistent="true"
      android:defaultValue="4" />

   <MultiSelectListPreference
      android:entries="@array/animals_list_for_settings"
      android:entryValues="@array/animals_list"
      android:key="pref_animalsToInclude"
      android:title="@string/world_animals"
      android:summary="@string/world_animals_description"
      android:persistent="true"
      android:defaultValue="@array/animals_list" />

</PreferenceScreen>