<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:showIn="@layout/activity_main"
                tools:context=".MainActivityFragment"
              android:orientation="vertical"
              android:id="@+id/quizLinearLayout"
               android:background="@drawable/fern_dark">

   <TextView
       android:id="@+id/questionNumberTextView"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_gravity="center_horizontal"
       android:layout_marginBottom="@dimen/spacing"
       android:text="@string/question"
       android:textAppearance="?android:attr/textAppearanceMedium"
       android:textColor="@color/quiz_text_default"
       android:textStyle="bold" />

   <ImageView
       android:id="@+id/flagImageView"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_gravity="top|center_horizontal"
       android:layout_marginBottom="@dimen/spacing"
       android:layout_marginLeft="@dimen/activity_horizontal_margin"
       android:layout_marginRight="@dimen/activity_horizontal_margin"
       android:layout_weight="1"
       android:adjustViewBounds="true"
       android:contentDescription="@string/image_description"
       android:maxHeight="250dp"
       android:scaleType="fitCenter" />

   <TextView
       android:id="@+id/guessSpeciesTextView"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_gravity="center_horizontal"
       android:text="@string/guess_species"
       android:textAppearance="?android:attr/textAppearanceMedium"
       android:textColor="@color/quiz_text_default"
       android:textStyle="bold" />

   <LinearLayout
      android:orientation="horizontal"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:id="@+id/row1LinearLayout">

      <Button
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:text="New Button"
         android:id="@+id/button"
         android:layout_weight="1"
         android:lines="2"
         style="@android:style/Widget.Material.Button.Colored"
         android:textColor="@color/button_text_color"/>

      <Button
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:text="New Button"
         android:id="@+id/button2"
         android:layout_weight="1"
         android:lines="2"
         style="@android:style/Widget.Material.Button.Colored"
         android:textColor="@color/button_text_color"/>
   </LinearLayout>

   <LinearLayout
      android:orientation="horizontal"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:id="@+id/row2LinearLayout">

      <Button
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:text="New Button"
         android:id="@+id/button3"
         android:layout_weight="1"
         android:lines="2"
         style="@android:style/Widget.Material.Button.Colored"
         android:textColor="@color/button_text_color"/>

      <Button
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:text="New Button"
         android:id="@+id/button4"
         android:layout_weight="1"
         android:lines="2"
         style="@android:style/Widget.Material.Button.Colored"
         android:textColor="@color/button_text_color"/>
   </LinearLayout>

   <LinearLayout
      android:orientation="horizontal"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:id="@+id/row3LinearLayout">

      <Button
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:text="New Button"
         android:id="@+id/button5"
         android:layout_weight="1"
         android:lines="2"
         style="@android:style/Widget.Material.Button.Colored"
         android:textColor="@color/button_text_color"/>

      <Button
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:text="New Button"
         android:id="@+id/button6"
         android:layout_weight="1"
         android:lines="2"
         style="@android:style/Widget.Material.Button.Colored"
         android:textColor="@color/button_text_color"/>
   </LinearLayout>

   <LinearLayout
      android:orientation="horizontal"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:id="@+id/row4LinearLayout">

      <Button
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:text="New Button"
         android:id="@+id/button7"
         android:layout_weight="1"
         android:lines="2"
         style="@android:style/Widget.Material.Button.Colored"
         android:textColor="@color/button_text_color"/>

      <Button
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:text="New Button"
         android:id="@+id/button8"
         android:layout_weight="1"
         android:lines="2"
         style="@android:style/Widget.Material.Button.Colored"
         android:textColor="@color/button_text_color"/>
   </LinearLayout>

   <LinearLayout
       android:orientation="vertical"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:id="@+id/row5LinearLayout">

   <TextView
       android:id="@+id/answerTextView"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_alignParentLeft="true"
       android:layout_alignParentRight="true"
       android:layout_gravity="center_horizontal"
       android:layout_marginTop="20dp"
       android:layout_weight="0"
       android:background="@drawable/rounded_corner"
       android:scaleType="fitXY"
       android:text="Medium Text"
       android:textAlignment="center"
       android:textAppearance="?android:attr/textAppearanceMedium"
       android:textSize="@dimen/answer_size"
       android:textStyle="bold" />

   <ImageView
       android:id="@+id/answerImageView"
       android:layout_width="100dp"
       android:layout_height="60dp"
       android:layout_gravity="center_horizontal"
       android:scaleType="fitXY"
       android:layout_marginTop="-1dp"
       android:adjustViewBounds="true"
       android:src="@drawable/thumbs_down"
       android:textAlignment="center" />

   </LinearLayout>
</LinearLayout>
